<resources>
    <string name="app_name">无他头条</string>

    <string name="response_code_other">未知错误</string>
    <string name="response_code_10001">服务器异常</string>
    <string name="response_code_20002">对不起,您无权使用该服务</string>
    <string name="tip_file_path_unexists">文件不存在，请修重新选择图片</string>


    <string name="splash_right_declare">All  Rights  reserved  SINASHOW</string>
    <string name="splash_txt">懂她的  才是真我</string>

    <string name="tab_main">首页</string>
    <string name="tab_topic">圈子</string>
    <string name="tab_mine">我的</string>
    <string name="tab_unlogin">未登录</string>

    <string name="exit_app_tips">再按一次退出</string>

    <string name="mine_login_tip">点击登陆</string>
    <string name="mine_login_des">（登陆体验更贴心呦）</string>
    <string name="mine_collect">收藏</string>
    <string name="mine_record">足迹</string>
    <string name="mine_tiezi">贴子</string>
    <string name="mine_item_msg">我的消息</string>
    <string name="mine_item_follow">我的关注</string>
    <string name="mine_item_activity">活动中心</string>
    <string name="mine_item_opinion">意见反馈</string>
    <string name="mine_item_setting">系统设置</string>

    <!--登录-->
    <string name="login_protocol">使用即为同意《注册协议》</string>
    <string name="login_phone">手机号注册/登陆</string>
    <string name="login_wx">微信</string>
    <string name="login_qq">QQ</string>
    <string name="login_guest">游客</string>

</resources>
