<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="@dimen/DIMEN_100PX"
    android:layout_gravity="bottom"
    android:layout_marginBottom="@dimen/DIMEN_78PX"
    android:background="@color/white">

    <TextView
        android:id="@+id/tv_right_declare"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/splash_right_declare"
        android:textColor="@color/splash_txt"
        android:textSize="13sp" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/tv_right_declare"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/DIMEN_10PX">

        <ImageView
            android:id="@+id/iv_icon"
            android:layout_width="@dimen/DIMEN_68PX"
            android:layout_height="@dimen/DIMEN_68PX"
            android:background="@mipmap/ic_launcher" />

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/iv_icon"
            android:layout_alignTop="@id/iv_icon"
            android:layout_marginLeft="@dimen/DIMEN_9PX"
            android:layout_toRightOf="@id/iv_icon">

            <TextView
                android:id="@+id/tv_app_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/app_name"
                android:textColor="@color/black"
                android:textSize="27sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@id/iv_icon"
                android:layout_alignLeft="@id/tv_app_name"
                android:layout_gravity="center_horizontal|bottom"
                android:text="@string/splash_txt"
                android:textColor="@color/black"
                android:textSize="16sp" />

        </FrameLayout>

    </RelativeLayout>

</RelativeLayout>